Fix examples CSS to stop info boxes wrapping

--- a/examples/css/examples.css
+++ b/examples/css/examples.css
@@ -15,7 +15,7 @@ html, body, #map {
 
 .box {
 	float: left;
-	width:400px;
+	width: 360px;
 	margin-right: 20px;
 	border: 1px solid #AAA;
 }
